<resources>
    <string name="app_name">Restable</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="textResultsTitle">Your sleep activity results:</string>
    <string name="save_button">Save</string>
    <string name="done_button">Done</string>
    <string name="x_axis_title_humidity_chart">Time</string>
    <string name="y_axis_title_humidity_chart">RH%</string>
    <string name="x_axis_title_temp_chart">Time</string>
    <string name="y_axis_title_temp_chart">°C</string>
    <string name="x_axis_title_sound_chart">Time</string>
    <string name="y_axis_title_sound_chart">dB</string>
    <string name="x_axis_title_motion_chart">Time</string>
    <string name="y_axis_title_motion_chart">cm</string>
    <string name="average_temp">Average<br/>Temperature:</string>
    <string name="average_humidity">Average<br/>Humidity:</string>
    <string name="start_time">Start time:</string>
    <string name="stop_time">Wake up time:</string>
    <string name="time_slept">Time Slept:</string>
    <string name="suggested_wake_up_times">Suggested Wake-Up Times</string>
    <string name="tap_a_time_to_set_an_alarm">Tap a Time to Set an Alarm</string>
    <string name="tap_a_set_alarm_to_cancel_it">Tap a Set Alarm to Cancel It</string>
    <string name="custom_alarm">Custom alarm</string>
    <string name="start_without_alarm">Start without Alarm</string>
    <string name="alarm_set">Alarm Set</string>
    <string name="h_of_sleep">h of sleep</string>
    <string name="hours_of_sleep">of sleep</string>
    <string name="rating">Rating</string>
    <string name="h_h">H.H</string>
    <string name="time">Time</string>
    <string name="clock_logo">Clock Logo</string>
    <string name="to">to</string>
    <string name="month_day">Month Day</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="no_sleep_sessions_saved">No Sleep Sessions Saved</string>
    <string name="disconnect">Disconnect</string>
    <string name="restable_now_recording">Restable now recording…</string>
    <string name="connect">Connect</string>
    <string name="text_text_nothing_here">No sleep activity data recorded. Nothing to display here...</string>
    <string name="button_text_nothing_here">Return</string>
    <string name="forgot_your_password"><u>Forgot Your Password?</u></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="welcome_to_restable">Welcome to Restable</string>
    <string name="register"><u>Register</u></string>
    <string name="for_an_account">for an account</string>
    <string name="score_motion">Score motion</string>
    <string name="score_temp">Score Temp</string>
    <string name="score_humidity">Score humidity</string>
    <string name="total_score">Total Score:</string>
    <string name="score_sound">Score sound</string>
    <string name="please_connect">Please connect to device</string>
</resources>