<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    android:id="@+id/view_log_layout"
    tools:context=".ViewLogActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/x_axis_title_humidity_chart_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_chart_humidity_log"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="168dp"
            android:text="@string/x_axis_title_humidity_chart" />


        <TextView
            android:id="@+id/y_axis_title_humidity_chart_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="149dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/line_chart_humidity_log"
            android:rotation="-90"
            android:text="@string/y_axis_title_humidity_chart" />

        <TextView
            android:id="@+id/x_axis_title_temp_chart_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_chart_motion_log"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="202dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="171dp"
            android:text="@string/x_axis_title_temp_chart" />

        <TextView
            android:id="@+id/y_axis_title_temp_chart_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/y_axis_title_humidity_chart_log"
            android:layout_alignParentStart="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/line_chart_motion_log"
            android:rotation="-90"
            android:text="@string/y_axis_title_temp_chart" />

        <TextView
            android:id="@+id/x_axis_title_sound_chart_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_chart_sound_log"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="205dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="174dp"
            android:text="@string/x_axis_title_sound_chart" />

        <TextView
            android:id="@+id/y_axis_title_sound_chart_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/y_axis_title_temp_chart_log"
            android:layout_alignParentStart="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="191dp"
            android:layout_marginEnd="7dp"
            android:layout_toStartOf="@+id/line_chart_sound_log"
            android:rotation="-90"
            android:text="@string/y_axis_title_sound_chart" />

        <TextView
            android:id="@+id/x_axis_title_motion_chart_log"
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_chart_temp_log"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="198dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="176dp"
            android:text="@string/x_axis_title_motion_chart" />

        <TextView
            android:id="@+id/y_axis_title_motion_chart_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/y_axis_title_sound_chart_log"
            android:layout_alignParentStart="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="186dp"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@+id/line_chart_temp_log"
            android:rotation="-90"
            android:text="@string/y_axis_title_motion_chart" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart_humidity_log"
            android:layout_width="350dp"
            android:layout_height="170dp"
            android:layout_below="@+id/time_slept_log"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="5dp" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart_temp_log"
            android:layout_width="350dp"
            android:layout_height="170dp"
            android:layout_below="@+id/x_axis_title_sound_chart_log"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="5dp" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart_sound_log"
            android:layout_width="350dp"
            android:layout_height="170dp"
            android:layout_below="@+id/x_axis_title_temp_chart_log"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart_motion_log"
            android:layout_width="350dp"
            android:layout_height="170dp"
            android:layout_below="@+id/x_axis_title_humidity_chart_log"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/average_temp_log"
            android:layout_width="195dp"
            android:layout_height="65dp"
            android:layout_below="@+id/average_humidity_log"
            android:layout_alignStart="@+id/average_humidity_log"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="206dp"
            android:text="@string/average_temp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/average_humidity_log"
            android:layout_width="194dp"
            android:layout_height="56dp"
            android:layout_below="@+id/x_axis_title_motion_chart_log"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="208dp"
            android:text="@string/average_humidity"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/start_time_log"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_below="@+id/average_temp_log"
            android:layout_alignStart="@+id/average_humidity_log"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="210dp"
            android:text="@string/start_time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/stop_time_log"
            android:layout_width="213dp"
            android:layout_height="35dp"
            android:layout_below="@+id/start_time_log"
            android:layout_alignStart="@+id/average_humidity_log"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="188dp"
            android:text="@string/stop_time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/time_slept_log"
            android:layout_width="226dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="93dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="93dp"
            android:text="@string/time_slept" />
    </RelativeLayout>
</ScrollView>