<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/parent_layout"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/startDateTextViewLogs"
        android:fontFamily="@font/surt_bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:paddingTop="2dp"
        android:text="@string/month_day"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/hoursTextViewLogs"
        android:fontFamily="@font/surt_light"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startDateTextViewLogs"
        android:text="@string/h_h"
        android:layout_alignStart="@id/startDateTextViewLogs"
        android:textSize="18sp"
        android:paddingBottom="2dp"/>

    <TextView
        android:id="@+id/endTimeTextViewLogs"
        android:fontFamily="@font/surt_light"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/startDateTextViewLogs"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:text="@string/end"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:fontFamily="@font/surt_bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/endTimeTextViewLogs"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@id/endTimeTextViewLogs"
        android:text="@string/to"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/startTimeTextViewLogs"
        android:fontFamily="@font/surt_bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/endTimeTextViewLogs"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@id/textView3"
        android:text="@string/start"
        android:textSize="14sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/hoursOfSleepTextViewLogs"
        android:fontFamily="@font/surt_light"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/hoursTextViewLogs"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/hoursTextViewLogs"
        android:gravity="end"
        android:text="@string/of_sleep"
        android:textSize="18sp" />


</RelativeLayout>